--- a/src/network-workloads/conf/dragonfly-plus/dfp-test.conf
+++ b/src/network-workloads/conf/dragonfly-plus/dfp-test.conf
@@ -57,6 +57,6 @@ PARAMS
 #    routing="minimal";
    routing="prog-adaptive";
 # route scoring protocol to be used - options are 'alpha' or 'beta'
-   route_scoring_metric="delta";
+   route_scoring_metric="beta";
 
 }
