--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -93,6 +93,7 @@ nobase_include_HEADERS = \
 	codes/model-net-sched-impl.h \
 	codes/model-net-inspect.h \
 	codes/connection-manager.h	\
+	codes/congestion-controller.h \
 	codes/net/common-net.h \
 	codes/net/dragonfly.h \
 	codes/net/dragonfly-custom.h \
@@ -152,6 +153,7 @@ src_libcodes_la_SOURCES =  \
 	src/util/codes-mapping-context.c \
   	src/util/codes-comm.c \
 	src/util/connection-manager.C \
+	src/util/congestion-controller.C \
     src/workload/codes-workload.c \
     src/workload/methods/codes-iolang-wrkld.c \
     src/workload/methods/codes-checkpoint-wrkld.c \
