Add New NetworkManager Data Structure
Network and Connection Manager: Link Failure Optimizations and Implementations

Rename Connection Manager File to Network Manager

The connection manager file has been renamed to network manager
as this file holds both the larger "NetworkManager" class as
well as the contained "ConnectionManager" class.

The rename makes it more obvious that this file has things that
are useful for the organization of a network and thus has
broader use than just managing connections on a router.

--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -92,7 +92,7 @@ nobase_include_HEADERS = \
 	codes/model-net-sched.h \
 	codes/model-net-sched-impl.h \
 	codes/model-net-inspect.h \
-	codes/connection-manager.h	\
+	codes/network-manager.h	\
 	codes/net/common-net.h \
 	codes/net/dragonfly.h \
 	codes/net/dragonfly-custom.h \
@@ -151,7 +151,7 @@ src_libcodes_la_SOURCES =  \
 	src/util/jobmap-impl/jobmap-identity.c\
 	src/util/codes-mapping-context.c \
   	src/util/codes-comm.c \
-	src/util/connection-manager.C \
+	src/util/network-manager.C \
     src/workload/codes-workload.c \
     src/workload/methods/codes-iolang-wrkld.c \
     src/workload/methods/codes-checkpoint-wrkld.c \
