Fixup: Add makefile changes

--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -94,7 +94,7 @@ nobase_include_HEADERS = \
 	codes/model-net-inspect.h \
 	codes/congestion-controller-core.h \
 	codes/congestion-controller-model.h \
-	codes/network-manager.h	\
+	codes/network-manager/dragonfly-network-manager.h	\
 	codes/net/common-net.h \
 	codes/net/dragonfly.h \
 	codes/net/dragonfly-custom.h \
@@ -154,7 +154,6 @@ src_libcodes_la_SOURCES =  \
 	src/util/codes-mapping-context.c \
   	src/util/codes-comm.c \
 	src/util/congestion-controller.C \
-	src/util/network-manager.C \
     src/workload/codes-workload.c \
     src/workload/methods/codes-iolang-wrkld.c \
     src/workload/methods/codes-checkpoint-wrkld.c \
@@ -162,6 +161,7 @@ src_libcodes_la_SOURCES =  \
 	src/workload/methods/codes-iomock-wrkld.c \
 	codes/rc-stack.h \
 	src/util/rc-stack.c \
+	src/networks/model-net/network-managers/dragonfly-network-manager.C \
 	src/networks/model-net/core/model-net.c \
 	src/networks/model-net/common-net.c \
 	src/networks/model-net/simplenet-upd.c \
