Packet source terminal is notified on packet delay delivery
To test the changes, I've used the synthetic ping pong example, which
has been modified to allow for a more random pattern.

Printing to screen the delay of each packet is a temporal change.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ add_subdirectory(src)
 
 configure_file(codes_config.h.in codes_config.h)
 
+add_subdirectory(doc/example)
 
 string(COMPARE NOTEQUAL "RELEASE" "${CMAKE_BUILD_TYPE}" not_release)
 if(BUILD_TESTING AND not_release)
