Basic Director implementation to switch to and from surrogate mode
- This needs ROSS commit 178e3c0
- The director is a function that it's called at GVT by ROSS
- Average latency predictor implemented

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -185,7 +185,7 @@ endforeach()
 # configure_file(modelconfig/configparser.c ${CMAKE_CURRENT_BINARY_DIR}/modelconfig/configparser.c COPYONLY)
 # configure_file(modelconfig/configparser.h ${CMAKE_CURRENT_BINARY_DIR}/modelconfig/configparser.h COPYONLY)
 
-install(DIRECTORY "${CMAKE_SOURCE_DIR}/codes" DESTINATION "${CMAKE_BINARY_DIR}")
+install(DIRECTORY "${CMAKE_SOURCE_DIR}/codes" DESTINATION include)
 
 install(TARGETS ${CODES_TARGETS} DESTINATION bin)
 
