Tracking new parameter: timestamp at which a packet was injected in model-net by a workload

--- a/doc/example/tutorial-ping-pong-surrogate.conf
+++ b/doc/example/tutorial-ping-pong-surrogate.conf
@@ -1,3 +1,6 @@
+# Run this example with:
+# > cd path-to-codes/build
+# > mpirun -np 2 doc/example/tutorial-synthetic-ping-pong --synch=3 --num_messages=10000 -- ../doc/example/tutorial-ping-pong-surrogate.conf
 LPGROUPS
 {
    MODELNET_GRP
@@ -59,7 +62,8 @@ SURROGATE {
 
 # director configuration for: director_mode == "at-fixed-virtual-times"
 # timestamps at which to switch to surrogate-mode and back
-   fixed_switch_timestamps=( "100e4", "8900e4" );
+   #fixed_switch_timestamps=( "100e4", "8900e4" );  # the first switch happens at around 100 ping messages, the second at approx. 9900 pings
+   fixed_switch_timestamps=( "1000e4", "8900e4" );  # the first switch happens at around 1000 ping messages, the second at approx. 9900 pings
 
 # latency predictor to use
    packet_latency_predictor="average";
