Loading router buffer occupancies via the config file

--- a/doc/example/tutorial-ping-pong-surrogate.conf
+++ b/doc/example/tutorial-ping-pong-surrogate.conf
@@ -1,6 +1,6 @@
 # Run this example with:
 # > cd path-to-codes/build
-# > mpirun -np 2 doc/example/tutorial-synthetic-ping-pong --synch=3 --num_messages=10000 -- ../doc/example/tutorial-ping-pong-surrogate.conf
+# > mpirun -np 2 doc/example/tutorial-synthetic-ping-pong --synch=3 --num_messages=10000 --lp-io-dir=codes-output -- ../doc/example/tutorial-ping-pong-surrogate.conf
 LPGROUPS
 {
    MODELNET_GRP
@@ -55,6 +55,8 @@ PARAMS
    routing="prog-adaptive";
 # folder path to store packet latency from terminal to terminal, if no value is given it won't save anything
    save_packet_latency_path="packet-latency-trace/";
+# router buffer occupancy snapshots
+   router_buffer_snapshots=( "50e4", "60e4" );
 }
 SURROGATE {
 # determines the director switching from surrogate to high-def simulation strategy
