--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,51 +58,47 @@ else(DUMPI_LIB)
         set(USE_DUMPI true)
 endif()
 
-# SWM
+# SWM and UNION (both require ARGOBOTS to function)
 pkg_check_modules(SWM IMPORTED_TARGET swm)
 if(NOT SWM_FOUND)
-        message(STATUS "SWM Library Not Found, Online workloads disabled")
+    message(STATUS "SWM Library Not Found, Online workloads disabled")
+
 else(SWM_FOUND)
-        message(STATUS "SWM Library Found: ${SWM_LIBRARIES}")
-        pkg_check_modules(ARGOBOTS REQUIRED IMPORTED_TARGET argobots)
-        if(NOT ARGOBOTS_FOUND)
-                message(STATUS "Argobots Library Not Found, Online workloads disabled")
-        else(ARGOBOTS_FOUND)
-                message(STATUS "Argobots Library Found: ${ARGOBOTS_LIBRARIES}")
-                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ARGOBOTS_CFLAGS} -I${ARGOBOTS_INCLUDE}")
+    message(STATUS "SWM Library Found: ${SWM_LIBRARIES}")
+    pkg_check_modules(ARGOBOTS REQUIRED IMPORTED_TARGET argobots)
+    if(NOT ARGOBOTS_FOUND)
+        message(STATUS "Argobots Library Not Found, Online workloads disabled")
 
-                pkg_get_variable(SWM_DATAROOTDIR swm datarootdir)
-                cmake_print_variables(SWM_DATAROOTDIR)
+    else(ARGOBOTS_FOUND)
+        message(STATUS "Argobots Library Found: ${ARGOBOTS_LIBRARIES}")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ARGOBOTS_CFLAGS} -I${ARGOBOTS_INCLUDE}")
 
-                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SWM_CFLAGS} -I${SWM_INCLUDE}")
-                #add_definitions(-DUSE_SWM=1)
-                #set(USE_SWM true)
+        pkg_get_variable(SWM_DATAROOTDIR swm datarootdir)
+        cmake_print_variables(SWM_DATAROOTDIR)
+
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SWM_CFLAGS} -I${SWM_INCLUDE}")
+
+        pkg_check_modules(UNION IMPORTED_TARGET union)
+        if(NOT UNION_FOUND)
+            message(STATUS "UNION Library Not Found, SWM-only online workloads enabled")
+            add_definitions(-DUSE_SWM=1)
+            set(USE_SWM true)
+        else(UNION_FOUND)
+            message(STATUS "UNION Library Found: ${UNION_LIBRARIES}")
+            pkg_get_variable(UNION_DATAROOTDIR union datarootdir)
+            cmake_print_variables(UNION_DATAROOTDIR)
+            
+            set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${UNION_INCLUDE}")
+            foreach(INCLUDE_OPT ${UNION_CFLAGS})
+                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${INCLUDE_OPT}")
+            endforeach()
+
+            add_definitions(-DUSE_UNION=1)
+            set(USE_UNION true)
         endif()
+    endif()
 endif()
 
-pkg_check_modules(UNION IMPORTED_TARGET union)
-if(NOT UNION_FOUND)
-        message(STATUS "UNION Library Not Found, Online workloads disabled")
-else(UNION_FOUND)
-        message(STATUS "UNION Library Found: ${UNION_LIBRARIES}")
-        pkg_check_modules(ARGOBOTS REQUIRED IMPORTED_TARGET argobots)
-        if(NOT ARGOBOTS_FOUND)
-                message(STATUS "Argobots Library Not Found, Union workloads disabled")
-        else(ARGOBOTS_FOUND)
-                message(STATUS "Argobots Library Found: ${ARGOBOTS_LIBRARIES}")
-                #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ARGOBOTS_CFLAGS} -I${ARGOBOTS_INCLUDE}")
-
-                pkg_get_variable(UNION_DATAROOTDIR union datarootdir)
-                cmake_print_variables(UNION_DATAROOTDIR)
-        
-                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${UNION_INCLUDE}")
-                foreach(INCLUDE_OPT ${UNION_CFLAGS})
-                    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${INCLUDE_OPT}")
-                endforeach(INCLUDE_OPT)
-                add_definitions(-DUSE_UNION=1)
-                set(USE_UNION true)
-        endif()
-endif()
 
 ## RECORDER
 option(USE_RECORDER "use recorder io workload" ON)
