Allowing to disable torch if library is present

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,12 +120,20 @@ endif()
 # endif()
 
 ## TORCH loading ML models
-find_package(Torch)
-if(Torch_FOUND)
-    add_definitions(-DUSE_TORCH)
-    set(USE_TORCH true)
+if((NOT DEFINED USE_TORCH) OR USE_TORCH)
+    find_package(Torch)
+    if(Torch_FOUND)
+        set(CMAKE_CXX_STANDARD 17)
+        add_definitions(-DUSE_TORCH)
+        set(USE_TORCH true)
+        message(STATUS "Loading TORCH models enabled.")
+    else()
+        set(USE_TORCH false)
+        message(STATUS "Torch library not found. Loading TORCH models disabled.")
+    endif()
+else()
+    message(STATUS "Loading TORCH models NOT enabled.")
 endif()
-
 
 cmake_print_variables(CMAKE_C_FLAGS)
 add_subdirectory(src)
