Updating port-occupancy script

--- a/doc/example/CMakeLists.txt
+++ b/doc/example/CMakeLists.txt
@@ -20,6 +20,7 @@ set(CHUNK_SIZE "64")
 set(NETWORK_TREATMENT "freeze")
 set(PACKET_LATENCY_TRACE_PATH "packet-latency-trace/")
 set(IGNORE_UNTIL "200e4")
+set(PREDICTOR_TYPE "average")
 string(REPLACE ${single_quote} ${double_quote} SWITCH_TIMESTAMPS "'1000e4', '8900e4'")
 configure_file(tutorial-ping-pong.conf.in tutorial-ping-pong.conf)
 configure_file(tutorial-ping-pong-surrogate.conf.in tutorial-ping-pong-surrogate.conf)
