Improving figure generation script

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,8 @@ ross.csv
 
 install-mastiff/include/codes/model-net-method.h
 
-# commonly used building folder
+# commonly used building stuff
 /build*/
+/build*
+.cache
+compile_commands.json
