Renaming surrogate as network-surrogate

--- a/doc/example/tutorial-ping-pong-surrogate.conf.in
+++ b/doc/example/tutorial-ping-pong-surrogate.conf.in
@@ -58,7 +58,7 @@ PARAMS
 # router buffer occupancy snapshots
    router_buffer_snapshots=( ${BUFFER_SNAPSHOTS} );
 }
-SURROGATE {
+NETWORK_SURROGATE {
 # determines the director switching from surrogate to high-def simulation strategy
    director_mode="at-fixed-virtual-times";
 
