Initial implementation of director for application iteration
Many of the input parameters for the director and predictor are
hardcoded. Things like, number of iterations that the application will
run, number of applications and how often to call the director (how many
GVTs to wait until calling it).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,7 +56,10 @@ list(APPEND SRCS
     util/congestion-controller.C
 
     surrogate/init.c
+    surrogate/application-surrogate.c
     surrogate/network-surrogate.c
+    surrogate/app-iteration-predictor/common.c
+    surrogate/app-iteration-predictor/average.c
     surrogate/packet-latency-predictor/common.c
     surrogate/packet-latency-predictor/average.c
 
