Modifying tests. They all pass now!

--- a/doc/example/tutorial-ping-pong-surrogate.conf.in
+++ b/doc/example/tutorial-ping-pong-surrogate.conf.in
@@ -59,6 +59,8 @@ PARAMS
    router_buffer_snapshots=( ${BUFFER_SNAPSHOTS} );
 }
 NETWORK_SURROGATE {
+   enable="1"; # Options: 0 or 1
+
 # determines the director switching from surrogate to high-def simulation strategy
    director_mode="at-fixed-virtual-times";
 
